--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_login.html" %}
 {% load staticfiles %}
 {% load widget_tweaks %}
 
@@ -8,71 +8,36 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 
-{% block slide %}
-   
-<section id="home" class="home">
-    
-      <!--   <div class="overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 ">
-                        <div class="main_home_slider">
-                            <div class="single_home_slider">
-                                <div class="main_home wow"> -->
-                                    <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/top-recette.jpg' %}">
-                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
+{% block content %}
+    <section class="portfolio">
+        <div class="container">                                 
+            <div class="row ">
 
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div> -->
-<!-- 
-                                </div>
-                            </div>
-                            
-                            
+                <div class="col-md-offset-2 col-md-8 padding-20">
+                    <div class="login">
+                    <h4>{% trans "Réinitialiser votre mot de passe" %}</h4>
+                    {% if user.is_authenticated %}
+                    {% include "account/snippets/already_logged_in.html" %}
+                    {% endif %}
+
+                    <p>{% trans "Vous avez oublié votre mot de passe? Entrez votre e-mail et un mail vous sera envoyé pour le réinitialiser." %}</p>
+
+                    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+                        {% csrf_token %}
+                       
+                        <div class="form-group">
+                            {{ form.email|add_class:'form-control'  }} 
+                            <span class="help-block">{{ form.email.error }}</span>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-    </section>
-{% endblock slide %}
+                                        
+                        <button class="btn btn-primary" type="submit">{% trans 'Envoyer' %}</button>
+                    </form>
 
-{% block header %}
-
-   
-{% endblock header %}
-
-{% block content_base %}
-<section class="portfolio">
-    <div class="container">                                 
-        <div class="row ">
-
-            <div class="col-md-offset-2 col-md-8 card padding-20">
-
-                <h4>{% trans "Réinitialiser votre mot de passe" %}</h4>
-                {% if user.is_authenticated %}
-                {% include "account/snippets/already_logged_in.html" %}
-                {% endif %}
-
-                <p>{% trans "Vous avez oublié votre mot de passe? Entrez votre e-mail et un mail vous sera envoyé pour le réinitialiser." %}</p>
-
-                <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-                    {% csrf_token %}
-                   
-                    <div class="form-group">
-                        {{ form.email|add_class:'form-control'  }} 
-                        <span class="help-block">{{ form.email.error }}</span>
-                    </div>
-                                    
-                    <button class="btn btn-primary" type="submit">{% trans 'Envoyer' %}</button>
-                </form>
-
-                <p><b>{% blocktrans %} *Veuillez nous contacter si vous rencontrez des problèmes*.{% endblocktrans %}</b></p>
+                    <p><b>{% blocktrans %} *Veuillez nous contacter si vous rencontrez des problèmes*.{% endblocktrans %}</b></p>
+                     </div>
+                </div>  
             </div>  
-        </div>  
-    </div>
-</section> 
+        </div>
+    </section> 
                 
 {% endblock %}
