--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends "base_login.html" %}
+
 {% load staticfiles %}
 {% load thumbnail %}
 {% load widget_tweaks %}
@@ -7,46 +8,9 @@
 {% load account socialaccount %}
 {% load socialaccount %}
 {% providers_media_js %}
-{% block head_title %}{% trans "Sign up" %}{% endblock %}
+{% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block slide %}
-   
-<section id="home" class="home">
-    
-      <!--   <div class="overlay">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 ">
-                        <div class="main_home_slider">
-                            <div class="single_home_slider">
-                                <div class="main_home wow"> -->
-                                    <!-- <h1>Cook' iT</h1> -->
-                                    <img src="{% static 'assets/images/top-recette.jpg' %}">
-                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
-
-                                    <div class="home_btn">
-                                        <a href="" class="btn btn-primary">LEARN MORE</a>
-                                    </div> -->
-<!-- 
-                                </div>
-                            </div>
-                            
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-    </section>
-{% endblock slide %}
-
-{% block header %}
-
-   
-{% endblock header %}
-
-{% block content_base %}
-
+{% block content %}
 
 <section class="portfolio">
     <div class="container">                                 
