--- a/templates/base_principal.html
+++ b/templates/base_principal.html
@@ -39,16 +39,14 @@
                     <!-- right menu -->
                     <div class="col-md-4">
                         
-                        <div class="widget-left">
+                        <!-- <div class="widget-left">
 
                             
                             <div class="single_video">
-                                <div class="embed-responsive embed-responsive-16by9">
-                                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_l6CQRHIGyg"></iframe>
-                                </div>
+                               
                             </div>
                             
-                        </div>
+                        </div> -->
                         
                        <div class="widget-left">
                             <ul class="nav nav-tabs tabs-4">
