--- a/templates/notifications/all.html
+++ b/templates/notifications/all.html
@@ -11,7 +11,7 @@
 {% block slide %}
 
    <section id="home" class="home">
-        <img src="{% static 'assets/images/food_1.jpg' %}">
+        <img src="{% static 'assets/images/top-recette.jpg' %}">
 
     </section>
 {% endblock slide %}
