--- a/templates/recipe/recipe_list.html
+++ b/templates/recipe/recipe_list.html
@@ -11,6 +11,10 @@
 
    
         <img src="{% static 'assets/images/top-header.jpg' %}">
+         {% if "entrees" in request.path %}
+
+        {% endif %}
+        
                                    
 </section>
 
