--- a/gastronomie/static/assets/css/login-register.css
+++ b/gastronomie/static/assets/css/login-register.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Arvo);
+
 /*
  *
  * login-register modal
@@ -11,7 +13,7 @@
 
 @charset "UTF-8";
 
-.animated {
+/*.animated {
   -webkit-animation-duration: 1s;
 	   -moz-animation-duration: 1s;
 	     -o-animation-duration: 1s;
@@ -72,6 +74,52 @@
 	-moz-animation-name: shake;
 	-o-animation-name: shake;
 	animation-name: shake;
+}*/
+
+body{
+
+    background-image: url("../images/bg-large.jpg");
+
+}
+
+h1{
+    font-family: 'Arvo';
+    font-size: 42px;
+    color: white;
+    text-align: center; 
+    margin: 40px;
+}
+a{
+    text-decoration: none;
+    outline: none;
+    color: #f3b81f;
+    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+}
+a:hover,
+a:active,
+a:focus {
+    color: #ffd54f;
+    text-decoration: none;
+}
+a,
+button,
+a span {
+    -webkit-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
+    transition: 0.2s ease-in-out;
+}
+.btn-primary {
+    color: #fff;
+    background-color: #5e9a28;
+    border-color: #fff;
+    transition: .5s;    
+    border-color: transparent;
+}
+
+.btn-primary:hover {
+     border-color: #fff;
+    background-color: #5c8e2e;
+      
 }
 
 .login{
