--- a/gastronomie/static/assets/css/style.css
+++ b/gastronomie/static/assets/css/style.css
@@ -1,5 +1,7 @@
 
-
+@import url(https://fonts.googleapis.com/css?family=Tangerine);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans);
+@import url(https://fonts.googleapis.com/css?family=Arvo);
 /*
 Author: Bootstrapthemes
 Author URI: http://bootstrapthemes.co
@@ -58,11 +60,13 @@ img {
     user-select: none;
     -webkit-user-drag: none;
     user-drag: none;
+    max-width: 100%;
 }
 a{
     text-decoration: none;
     outline: none;
     color: #f3b81f;
+    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
 }
 a:hover,
 a:active,
@@ -92,23 +96,13 @@ a span {
     box-sizing: border-box;
     /*    direction: rtl;*/
 }
-p {
-    margin: 0 0 15px;
 
-}
-a{
-    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
-
-}
 .clear {
     clear: both;
 }
 
 
 
-img {
-    max-width: 100%;
-}
 textarea,
 input[type="text"],
 input[type="password"],
@@ -127,32 +121,6 @@ input[type="color"],
 .uneditable-input {
     outline: none;
 }
-/*.form-control {
-    border: 1px solid rgba(0, 0, 0, 0.08);
-    font-size: 16px;
-    height: 45px;
-}
-.form-control {
-    display: inline-block;
-    width: 60%;
-    height: 35px;
-    padding: 6px 25px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #fff;
-    background-color: #182e4c;
-    background-image: none;
-    border: 0px solid #ccc;
-    border-radius: 30px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-}
-.form-control:focus {
-    border-color: #5e9a28;
-}*/
 
 h1,
 h2,
@@ -205,6 +173,7 @@ p {
     line-height: 1.375rem;
     font-size: 0.95rem;
     text-align: justify;
+    
 }
 p:last-child {
     margin-bottom: 0px;
@@ -624,7 +593,7 @@ input::-ms-input-placeholder {
 
 }
 
-.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus{
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>.active{
     color:#f6c23a;
 }
 
@@ -762,11 +731,18 @@ input::-ms-input-placeholder {
     background-size: cover;
     background-position: center center;
     background-color: rgba(19, 10, 10, 0.84);
-    
+}
+
+@media (max-width: 992px)
+{
+    .home{
+
+        /*height: 200px;  */
+
+    }
 
 
 }
-
 .home .main_home{
     padding-top: 250px;
 }
@@ -2503,3 +2479,194 @@ iframe{
     border-left: 1px solid #e6e6f2 !important;
 }
 
+/* Portrait tablets and medium desktops */
+@media (max-width: 1199px) {
+    body {
+        font-size: 1rem;
+    }
+
+    h1 {
+        font-size: 3.5rem;
+    }
+    .single_mixi_portfolio img {
+        height: 230px;
+    }
+
+}
+
+/* Portrait tablets and small desktops */
+@media (max-width: 991px) {
+    html {
+        font-size: 90%;
+    }
+    h3 {
+        font-size: 1.575rem;
+        line-height: 2rem;
+        margin-bottom: 15px;
+    }
+    h5 {
+        font-size: 1.1rem;
+        margin-bottom: .5rem;
+        color: #696f7c;
+        line-height: 1.475rem;
+    }
+    h4 {
+        font-size: 1.225rem;
+        line-height: 2rem;
+    }  
+
+}
+/* Landscape phones and portrait tablets */
+@media  (max-width: 992px) {
+    html {
+        font-size: 95%;
+    }
+    .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+        border-color: transparent;
+        /*background-color: rgba(31, 31, 31, 0.65);*/
+    }
+    .navbar-default .navbar-nav>li>a {
+        color: #333;
+        font-family: 'robotobold';
+        text-transform: uppercase;
+        font-size: 12px;
+        /*background-color: rgba(31, 31, 31, 0.65);*/
+    }
+
+    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+        color: #444;
+        font-family: 'robotobold';
+    }
+    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover {
+        color: #f3b81f;
+    }
+
+    .main_menu_bg .navbar-nav>li>a {
+        text-align: center;
+    }
+    .copyright_text{
+        text-align: center;
+    }
+    .footer_socail{ 
+        text-align: center;
+    }
+    
+
+    .single_message_right{
+        margin:50px 0px;
+    }
+    .rp-post-instruction h5 {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+
+    .carousel-caption h1 {
+        font-size: 18px;
+    }
+    .top-navbar .navbar-right{
+        float: left;
+
+    }
+
+
+}
+
+
+/* Landscape phones and smaller */
+@media (max-width: 479px) {
+    html {
+        font-size: 95%;
+    }
+    .form-control {
+        margin-bottom: 10px;
+    }
+    
+    .rp-post-instruction h5 {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+    .footer_logo, .footer_title{
+        text-align: center;
+    }
+    .separator4{
+       display: none;
+    }
+
+}
+
+
+@media (max-width: 320px) {
+
+
+    html {
+        font-size: 80%;
+    }
+    .form-control {
+        margin-bottom: 10px;
+    }
+
+    .rp-post-instruction h5 {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+
+    .footer_logo, .footer_title{
+        text-align: center;
+    }
+    .separator4{
+       display: none;
+    }
+
+}
+
+@media only screen and (max-width: 768px) {
+  #slide-navbar-collapse {
+    position: fixed;
+    top: 0;
+    left: 15px;
+    z-index: 99;
+    width: 280px;
+    height: 100%;
+    background-color: #ddd;
+    overflow: auto;
+  }
+  .menu-overlay {
+    display: none;
+    background-color: #000;
+    bottom: 0;
+    left: 0;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
+    /* IE7 & 8 */
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 49;
+  }
+}
+ @media screen and (max-width: 992px) {
+      .side-collapse-container{
+          width:100%;
+          position:relative;
+          left:0;
+          transition:left .4s;
+
+      }
+      .side-collapse-container.out{
+          left:200px;
+
+      }
+      .side-collapse {
+          top:50px;
+          bottom:0;
+          left:0;
+          width:200px;
+          position:fixed;
+          overflow:hidden;
+          transition:width .4s;
+
+      }
+      .side-collapse.in {
+          width:0;
+      }
+  }
