--- a/gastronomie/static/assets/fonts/stylesheet.css
+++ b/gastronomie/static/assets/fonts/stylesheet.css
@@ -39,10 +39,6 @@
 
 }
 
-
-
-
-
 @font-face {
     font-family: 'latoregular';
     src: url('lato-regular-webfont.eot');
@@ -61,9 +57,26 @@
     font-family: 'Tangerine';
     src:
         url('Tangerine-Regular.ttf') format('truetype'),
-        url('Tangerine-Bold.ttf') format('truetype'),
-         
-    font-weight: normal;
-    font-style: normal;
+        url('Tangerine-Bold.ttf') format('truetype');
+   
+
+}
+
+
+@font-face {
+    font-family: 'Arvo';
+    src:
+        url('Arvo-Regular.ttf') format('truetype'),
+        url('Arvo-Bold.ttf') format('truetype'),
+        url('Arvo-BoldItalic.ttf');
+
+   
+
+}
+
+@font-face {
+    font-family: 'PT+Sans';
+   
+   
 
 }
