--- a/templates/recipe/accueil.html
+++ b/templates/recipe/accueil.html
@@ -59,28 +59,28 @@
             </ol>
             <!-- Carousel items -->
             <div class="carousel-inner carousel-zoom">
-                <div class="item active"><img  src="{% static 'assets/images/slide-1.jpg' %}" alt="">
+                <div class="item active"><img  src="{% static 'assets/images/slide-1.jpg' %}" alt="img-1">
                   <div class="carousel-caption">
                     <h1  data-animation="animated zoomInLeft" class="cap-txt "></h1>
                     <p data-animation="animated bounceInDown"></p>
                    
                   </div>
                 </div>
-               <div class="item"><img  src="{% static 'assets/images/slide-2.jpg' %}" alt="">
+               <div class="item"><img  src="{% static 'assets/images/slide-2.jpg' %}" alt="img-2">
                   <div class="carousel-caption">
                     <h1 data-animation="animated zoomInLeft" class="cap-txt"></h1>
                     <p data-animation="animated bounceInDown"></p>
                     
                   </div>
                 </div>
-                <div class="item"><img src="{% static 'assets/images/slide-3.jpg' %}" alt="">
+                <div class="item"><img src="{% static 'assets/images/slide-3.jpg' %}" alt="img-3">
                   <div class="carousel-caption animated slideInLeft">
                     <h1 data-animation="animated zoomInLeft" class="cap-txt"></h1>
                     <p data-animation="animated bounceInDown"></p>
                     
                   </div>
                 </div>
-                <div class="item"><img src="{% static 'assets/images/slide-4.jpg' %}" alt="">
+                <div class="item"><img src="{% static 'assets/images/slide-4.jpg' %}" alt="img-4">
                   <div class="carousel-caption animated slideInLeft">
                     <h1 data-animation="animated zoomInLeft" class="cap-txt"></h1>
                     <p data-animation="animated bounceInDown"></p>
