--- a/gastronomie/static/assets/css/login-register.css
+++ b/gastronomie/static/assets/css/login-register.css
@@ -85,7 +85,7 @@ body{
 h1{
     font-family: 'Arvo';
     font-size: 42px;
-    color: white;
+    color: #97b911;
     text-align: center; 
     margin: 40px;
 }
