--- a/templates/base.html
+++ b/templates/base.html
@@ -73,12 +73,11 @@
         <div class="container">
             <div class="col-md-12">
                 
-                <a href="" class="social-link"><i class="fa fa-facebook"></i></a>
-                <a href="" class="social-link"><i class="fa fa-twitter"></i></a>
-                <a href="" class="social-link"><i class="fa fa-google-plus"></i></a>
+                <a href="https://www.facebook.com/TogoKuizine-2180297015542613" target="blank" class="social-link"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/TKuizine" class="social-link"><i class="fa fa-twitter"></i></a>
                 <a href="" class="social-link"><i class="fa fa-instagram"></i></a>
-                <a href="" class="social-link"><i class="fa fa-youtube"></i></a>
-        
+                <a href="https://www.youtube.com/channel/UC8YM-CIYn3tQjCOHEN2GUFA" target="blank"class="social-link"><i class="fa fa-youtube"></i></a>
+                 
       
                    
             <ul class="list-inline navbar-right">
@@ -418,11 +417,10 @@
 
                         <div class="footer_socail_right">
                            
-                            <a href=""><i class="fa fa-facebook"></i></a>
-                            <a href=""><i class="fa fa-twitter"></i></a>
-                            <a href=""><i class="fa fa-google-plus"></i></a>
-                            <a href=""><i class="fa fa-instagram"></i></a>
-                            <a href=""><i class="fa fa-youtube"></i></a>
+                            <a href="https://www.facebook.com/TogoKuizine-2180297015542613" target="blank"><i class="fa fa-facebook"></i></a>
+                            <a href="https://twitter.com/TKuizine"><i class="fa fa-twitter" target="blank"></i></a>
+                            <a href=""><i class="fa fa-instagram" target="blank"></i></a>
+                            <a href="https://www.youtube.com/channel/UC8YM-CIYn3tQjCOHEN2GUFA" target="blank"><i class="fa fa-youtube"></i></a>
                         
                         </div>
                         
