--- a/templates/recipe/recipe_list.html
+++ b/templates/recipe/recipe_list.html
@@ -29,7 +29,7 @@
 
         <div class="mixcontent row">
         {% for recipe in recipes %}
-            <div class="col-md-6 wow bounceOut" data-wow-duration="5s" data-wow-delay="2s">
+            <div class="col-md-6 wow fadeIn" data-wow-duration="5s" data-wow-delay="2s">
                 <div class="single_mixi_portfolio margin-bottom-40">
                     <div class="view hm-zoom">
            
