--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -80,11 +80,11 @@
                     	 <p>{{post.text|safe|truncatewords:50}}</p>
                     	 <br>
                     	 <div class="pull-left ">
-                    		<i class="fa fa-tags"></i><strong>TAGS: </strong>
+                    		<i class="fa fa-tags"></i><strong>TAGS: &nbsp; </strong>
                             
                                 {% for tag in post.tags.all %}
 
-                                <a href="/blog/tag/?tag={{ tag.name }}">{{tag.name}}</a>,
+                                <a href="/blog/tag/?tag={{ tag.name }}">{{tag.name}}</a> &nbsp;
 
         
                                 {% endfor %}
