Ckeditor display in django admin interface

--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -4,7 +4,7 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Changer mot de passe" %}{% endblock %}
+{% block head_title %}{% trans "Changer le mot de passe" %}{% endblock %}
    
 {% block content_box_user %}
     <div class="row padding-20">
