--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -40,7 +40,7 @@
                   
                     {% for origin in recipe.origin.all %}
 
-                    <li><a href="/recipe/origin/?origin={{ origin.ethnic }}">{{origin.ethnic}}</a></li>
+                    <li><a href="/recipes/origin/?origin={{ origin.ethnic }}">{{origin.ethnic}}</a></li>
 
                     {% endfor %}
                 
